--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>525</width>
-    <height>520</height>
+    <width>471</width>
+    <height>519</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Hearthstone DeckFinder</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
@@ -28,7 +34,7 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>521</width>
+      <width>471</width>
       <height>499</height>
      </rect>
     </property>
@@ -36,8 +42,17 @@
      <property name="sizeConstraint">
       <enum>QLayout::SetMaximumSize</enum>
      </property>
+     <property name="leftMargin">
+      <number>6</number>
+     </property>
+     <property name="topMargin">
+      <number>6</number>
+     </property>
+     <property name="rightMargin">
+      <number>6</number>
+     </property>
      <property name="bottomMargin">
-      <number>0</number>
+      <number>6</number>
      </property>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -53,22 +68,20 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QCheckBox" name="checkBox_prepareAll">
+          <widget class="QCheckBox" name="checkBox_useCardsFile">
            <property name="text">
-            <string>Prepare All</string>
-           </property>
-           <property name="checkable">
-            <bool>true</bool>
+            <string>Use My Collection</string>
            </property>
            <property name="checked">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_PrepareAll">
+          <widget class="QPushButton" name="pushButton_updateMyCollection">
            <property name="text">
-            <string>Prepare All</string>
+            <string>Update My Collection
+ (HS must be open)</string>
            </property>
           </widget>
          </item>
@@ -76,6 +89,9 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <property name="spacing">
+          <number>6</number>
+         </property>
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
@@ -101,16 +117,23 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_8">
          <item>
-          <widget class="QCheckBox" name="checkBox_useCardsFile">
+          <widget class="QCheckBox" name="checkBox_prepareAll">
            <property name="text">
-            <string>Use Cards File</string>
+            <string>Prepare All</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="checked">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_useCardsFile">
+          <widget class="QPushButton" name="pushButton_PrepareAll">
            <property name="text">
-            <string>Choose File ...</string>
+            <string>Prepare All
+(use after updating)</string>
            </property>
           </widget>
          </item>
@@ -118,6 +141,9 @@
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
@@ -146,7 +172,7 @@
             <number>0</number>
            </property>
            <property name="maximum">
-            <number>3</number>
+            <number>2</number>
            </property>
            <property name="singleStep">
             <number>1</number>
@@ -155,7 +181,7 @@
             <number>10</number>
            </property>
            <property name="value">
-            <number>0</number>
+            <number>1</number>
            </property>
            <property name="tracking">
             <bool>true</bool>
@@ -173,7 +199,7 @@
            <item>
             <widget class="QLabel" name="label_synergy">
              <property name="text">
-              <string>Low</string>
+              <string>Medium</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -203,6 +229,9 @@
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_3">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
